force-app/main/default/objects/Product_Information__c/Product_Information__c.object-meta.xml
<CustomObject>
    <label>Product Information</label>
    <nameField>
        <displayFormat>PI{0000}</displayFormat>
        <label>Product Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Informations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>