force-app/main/default/objects/Product_Information__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>Product Informations</relationshipLabel>
    <relationshipName>Product_Informations</relationshipName>
    <type>Lookup</type>
</CustomField>