force-app/main/default/objects/Product_Information__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Informations</relationshipLabel>
    <relationshipName>Product_Informations</relationshipName>
    <type>Lookup</type>
</CustomField>