force-app/main/default/objects/Product_Information__c/fields/Replacement_Text__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Text__c</fullName>
    <label>Replacement Text</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Free</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>