force-app/main/default/objects/Product_Information__c/recordTypes/ATM_Fee_in_Other_Currencies.recordType-meta.xml
<RecordType>
    <fullName>ATM_Fee_in_Other_Currencies</fullName>
    <active>true</active>
    <description>This is to keep track of ATM Fees</description>
    <label>ATM Fee in Other Currencies</label>
</RecordType>