force-app/main/default/objects/Product_Information__c/recordTypes/Card_Replacement_Cost.recordType-meta.xml
<RecordType>
    <fullName>Card_Replacement_Cost</fullName>
    <active>true</active>
    <description>This is to keep track of Replacement Cost of a Card</description>
    <label>Card Replacement Cost</label>
</RecordType>