force-app/main/default/objects/Product_Information__c/recordTypes/Cost_Per_Calendar_Month.recordType-meta.xml
<RecordType>
    <fullName>Cost_Per_Calendar_Month</fullName>
    <active>true</active>
    <description>This is to keep track of Cost per month</description>
    <label>Cost Per Calendar Month</label>
</RecordType>