force-app/main/default/objects/Product_Information__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Product__c</columns>
    <columns>Country__c</columns>
    <columns>Amount__c</columns>
    <columns>Percentage__c</columns>
    <columns>Replacement_Text__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>